istio-voting-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: voting-gateway
  namespace: vote
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting-vs
  namespace: vote
spec:
  hosts:
  #- "*"
  - "voting.tsm.fbclouddemo.us"
  gateways:
  - voting-gateway
  http:
  #- match:
    #- uri:
        #prefix: /
  - route:
    - destination:
        host: vote
        port:
          number: 80
